--- a/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
@@ -34,19 +34,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Akka">
-      <HintPath>..\..\packages\Akka.1.1.1.245-beta\lib\net45\Akka.dll</HintPath>
+      <HintPath>..\..\packages\Akka.1.1.1.248-beta\lib\net45\Akka.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Cluster">
-      <HintPath>..\..\packages\Akka.Cluster.1.1.1.245-beta\lib\net45\Akka.Cluster.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Cluster.1.1.1.248-beta\lib\net45\Akka.Cluster.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Cluster.Sharding">
-      <HintPath>..\..\packages\Akka.Cluster.Sharding.1.1.1.245-beta\lib\net45\Akka.Cluster.Sharding.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Cluster.Sharding.1.1.1.248-beta\lib\net45\Akka.Cluster.Sharding.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Cluster.Tools">
-      <HintPath>..\..\packages\Akka.Cluster.Tools.1.1.1.245-beta\lib\net45\Akka.Cluster.Tools.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Cluster.Tools.1.1.1.248-beta\lib\net45\Akka.Cluster.Tools.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.DI.CastleWindsor, Version=1.0.8.191, Culture=neutral, processorArchitecture=MSIL">
@@ -55,11 +55,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.DI.Core">
-      <HintPath>..\..\packages\Akka.DI.Core.1.1.1.245-beta\lib\net45\Akka.DI.Core.dll</HintPath>
+      <HintPath>..\..\packages\Akka.DI.Core.1.1.1.248-beta\lib\net45\Akka.DI.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.DI.TestKit">
-      <HintPath>..\..\packages\Akka.DI.TestKit.1.1.1.245-beta\lib\net45\Akka.DI.TestKit.dll</HintPath>
+      <HintPath>..\..\packages\Akka.DI.TestKit.1.1.1.248-beta\lib\net45\Akka.DI.TestKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Logger.Serilog">
@@ -67,23 +67,23 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Persistence">
-      <HintPath>..\..\packages\Akka.Persistence.1.1.1.245-beta\lib\net45\Akka.Persistence.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Persistence.1.1.1.248-beta\lib\net45\Akka.Persistence.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Remote">
-      <HintPath>..\..\packages\Akka.Remote.1.1.1.245-beta\lib\net45\Akka.Remote.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Remote.1.1.1.248-beta\lib\net45\Akka.Remote.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.Serialization.Wire">
-      <HintPath>..\..\packages\Akka.Serialization.Wire.1.1.1.245-beta\lib\net45\Akka.Serialization.Wire.dll</HintPath>
+      <HintPath>..\..\packages\Akka.Serialization.Wire.1.1.1.248-beta\lib\net45\Akka.Serialization.Wire.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.TestKit">
-      <HintPath>..\..\packages\Akka.TestKit.1.1.1.245-beta\lib\net45\Akka.TestKit.dll</HintPath>
+      <HintPath>..\..\packages\Akka.TestKit.1.1.1.248-beta\lib\net45\Akka.TestKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Akka.TestKit.Xunit2">
-      <HintPath>..\..\packages\Akka.TestKit.Xunit2.1.1.1.245-beta\lib\net45\Akka.TestKit.Xunit2.dll</HintPath>
+      <HintPath>..\..\packages\Akka.TestKit.Xunit2.1.1.1.248-beta\lib\net45\Akka.TestKit.Xunit2.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
@@ -113,9 +113,8 @@
       <HintPath>..\..\packages\Google.ProtocolBuffers.2.4.1.555\lib\net40\Google.ProtocolBuffers.Serialization.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Helios, Version=2.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Helios.2.1.1\lib\net45\Helios.dll</HintPath>
+    <Reference Include="Helios">
+      <HintPath>..\..\packages\Helios.2.1.2\lib\net45\Helios.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="JetBrains.Annotations, Version=10.1.4.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
